--- a/java/apache-commons-httpclient/Makefile
+++ b/java/apache-commons-httpclient/Makefile
@@ -1,8 +1,6 @@
-# Created by: Alex Dupre <ale@FreeBSD.org>
-
 PORTNAME=	commons-httpclient
 DISTVERSION=	3.1
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	java www
 MASTER_SITES=	APACHE/httpcomponents/${PORTNAME}/source
 PKGNAMEPREFIX=	apache-
@@ -10,6 +8,7 @@ DISTNAME=	${PORTNAME}-${DISTVERSION}-src
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Package implementing the client side of the HTTP standard
+WWW=		https://hc.apache.org/httpclient-3.x/
 
 LICENSE=	apache2
 
@@ -20,10 +19,8 @@ RUN_DEPENDS+=	${JAVALIBDIR}/commons-codec.jar:java/apache-commons-codec
 
 OPTIONS_DEFINE=	DOCS
 
-USES+=		cpe
+USES+=		cpe java:ant,run
 CPE_VENDOR=	apache
-USE_JAVA=	yes
-USE_ANT=	yes
 MAKE_ENV=	ANT_INCLUDE_SHARED_JARS=YES
 NO_ARCH=	yes
 
