--- a/java/berkeley-db/Makefile
+++ b/java/berkeley-db/Makefile
@@ -1,8 +1,6 @@
-
-
 PORTNAME=	je
-PORTVERSION=	6.2.31
-PORTREVISION=	1
+PORTVERSION=	7.5.11
+PORTREVISION=	0
 CATEGORIES=	java databases
 MASTER_SITES=	http://download.oracle.com/berkeley-db/	\
 		http://download-east.oracle.com/berkeley-db/	\
@@ -10,34 +8,75 @@ MASTER_SITES=	http://download.oracle.com/berkeley-db/	\
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Berkeley DB Java Edition
+WWW=		https://www.oracle.com/database/technologies/related/berkeleydb.html
 
-LICENSE=	agpl
+LICENSE=	apache2
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
-OPTIONS_DEFINE=	DOCS EXAMPLES
+BUILD_DEPENDS=	${JAVALIBDIR}/junit.jar:java/junit
 
-BUILD_DEPENDS=	${JAVALIBDIR}/junit.jar:${PORTSDIR}/java/junit
+USES=		java:ant,run
+JAVA_VERSION=	8
 
-USE_JAVA=	yes
-JAVA_VERSION=	1.7+
-USE_ANT=	yes
+OPTIONS_DEFINE=	DOCS EXAMPLES TEST
+
 MAKE_ENV+=	JAVALIBDIR="${JAVALIBDIR}"
 MAKE_ARGS+=	-cp ${JAVALIBDIR}/junit.jar
+EXTRACT_AFTER_ARGS+=	--exclude '*.jar'
 
-PLIST_FILES=	%%JAVAJARDIR%%/je.jar
-
+PLIST_FILES=	${JAVAJARDIR:S,^${PREFIX}/,,}/je-${PORTVERSION}.jar \
+		${JAVAJARDIR:S,^${PREFIX}/,,}/je.jar
 PORTDOCS=	*
 PORTEXAMPLES=	*
 
+regression-test check test: build
+	#
+	# Running the vendor-provided self-tests. This may take a while
+	#
+	@if ! (cd ${BUILD_WRKSRC} ; ${MAKE_ENV} ${ANT} ${MAKE_ARGS} test) ; \
+	then	\
+		${ECHO_MSG} Please, review test failures and consider \
+			reporting them via \
+			http://forums.oracle.com/forums/forum.jspa?forumID=273 ; \
+		${FALSE} ; \
+	fi
+
 .include <bsd.mport.options.mk>
+
+.if ${PORT_OPTIONS:MTEST}
+post-build:	test
+	#
+	# Please, review the reported failures (if any) and consider
+	# reporting them to the developers via:
+	#	http://forums.oracle.com/forums/forum.jspa?forumID=273
+	# You can re-run the tests without rebuilding the port by
+	# simply doing `make test'
+	#
+.else
+post-build:
+	#
+	# Doing `make test' now might be useful (if time-consuming).
+	# Please, review the reported failures (if any) and consider
+	# reporting them via
+	#	http://forums.oracle.com/forums/forum.jspa?forumID=273
+	#
+.endif
 
 post-patch:
 	@${REINPLACE_CMD} "s,/usr/local,${PREFIX}," ${WRKSRC}/build.xml
+	${FIND} ${WRKSRC} -type f -name \*.java | ${XARGS} \
+	    ${REINPLACE_CMD} -i "" -E 's,[^[:print:]]+, ,g'
 
 do-install:
-	${INSTALL_DATA} ${WRKSRC}/build/lib/je.jar ${STAGEDIR}${JAVAJARDIR}
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	@(cd ${WRKSRC}/docs/ && ${COPYTREE_SHARE} . ${STAGEDIR}${DOCSDIR})
-	@${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
-	@(cd ${WRKSRC}/examples/ && ${COPYTREE_SHARE} . ${STAGEDIR}${EXAMPLESDIR})
+	${INSTALL_DATA} ${WRKSRC}/build/lib/je.jar ${STAGEDIR}${JAVAJARDIR}/je-${PORTVERSION}.jar
+	${LN} -s -f je-${PORTVERSION}.jar ${STAGEDIR}${JAVAJARDIR}/je.jar
+
+post-install-DOCS-on:
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	@(cd ${WRKSRC}/docs/ && ${COPYTREE_SHARE} . ${FAKE_DESTDIR}${DOCSDIR})
+
+post-install-EXAMPLES-on:
+	@${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}
+	@(cd ${WRKSRC}/examples/ && ${COPYTREE_SHARE} . ${FAKE_DESTDIR}${EXAMPLESDIR})
 
 .include <bsd.port.mk>
