--- a/graphics/linux-c7-sdl_ttf/Makefile
+++ b/graphics/linux-c7-sdl_ttf/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	sdl_ttf
 PORTVERSION=	2.0.11
 DISTVERSIONSUFFIX=	-6.el7
@@ -10,15 +8,16 @@ DISTNAME=	SDL_ttf-${DISTVERSIONFULL}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple library to load True Type Fonts as SDL interfaces (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://www.libsdl.org/projects/SDL_ttf/
 
 LICENSE=	gpl2
 
-ONLY_FOR_ARCHS=	amd64
+ONLY_FOR_ARCHS=	aarch64 amd64
 
 USES=		linux:c7
 USE_LDCONFIG=	yes
 USE_LINUX=	jpeg png sdl12 tiff
-USE_LINUX_RPM=	yes
+USE_LINUX_RPM=	nolib
 
 CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
 DESCR=		${.CURDIR}/../${PORTNAME}/pkg-descr
