textproc/kibana8: fix

--- a/textproc/kibana8/Makefile
+++ b/textproc/kibana8/Makefile
@@ -109,7 +109,7 @@ do-install:
 	${INSTALL} -lrs ${STAGEDIR}${ETCDIR} ${STAGEDIR}${WWWDIR}/config
 	${MKDIR} ${STAGEDIR}${WWWDIR}/node/bin
 	${LN} -s ${LOCALBASE}/bin/node ${STAGEDIR}${WWWDIR}/node/bin/node
-	${RM} ${STAGEDIR}${WWWDIR}/node_modules/re2/build/Release/re2.node
+	-${RM} ${STAGEDIR}${WWWDIR}/node_modules/re2/build/Release/re2.node
 	${INSTALL_LIB} ${_RE2DIR}/build/Release/re2.node \
 		${STAGEDIR}${WWWDIR}/node_modules/re2/build/Release/re2.node
 .for f in ${BINS}
