--- a/devel/p5-Sub-Name/Makefile
+++ b/devel/p5-Sub-Name/Makefile
@@ -1,12 +1,12 @@
 PORTNAME=	Sub-Name
-PORTVERSION=	0.27
+PORTVERSION=	0.28
 PORTEPOCH=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Sub::Name - (re)name a sub
+COMMENT=	Module to assign new names to Perl subroutines
 WWW=		https://metacpan.org/release/Sub-Name
 
 LICENSE=	artistic gpl
