--- a/devel/p5-Test-File/Makefile
+++ b/devel/p5-Test-File/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Test-File
-PORTVERSION=	1.44.3
+PORTVERSION=	1.44.4
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -7,8 +7,9 @@ DISTNAME=	${PORTNAME}-${PORTVERSION:R}${PORTVERSION:E}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Test file attributes
+WWW=		https://metacpan.org/release/Test-File
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 TEST_DEPENDS=	p5-Test-utf8>=0:devel/p5-Test-utf8
