--- a/devel/p5-Sub-Exporter-ForMethods/Makefile
+++ b/devel/p5-Sub-Exporter-ForMethods/Makefile
@@ -1,19 +1,19 @@
 PORTNAME=	Sub-Exporter-ForMethods
-PORTVERSION=	0.100052
+PORTVERSION=	0.100055
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Helper routines for using Sub::Exporter to build methods
+WWW=		https://metacpan.org/release/Sub-Exporter-ForMethods
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-Sub-Name>=0:devel/p5-Sub-Name \
-		p5-Sub-Exporter>=0.978:devel/p5-Sub-Exporter
+RUN_DEPENDS=	p5-Sub-Exporter>=0.978:devel/p5-Sub-Exporter
 TEST_DEPENDS=	p5-namespace-autoclean>=0:devel/p5-namespace-autoclean
 
 USES=		perl5
