--- a/devel/p5-Sub-Install/Makefile
+++ b/devel/p5-Sub-Install/Makefile
@@ -1,16 +1,16 @@
-
-
 PORTNAME=	Sub-Install
-PORTVERSION=	0.925
+PORTVERSION=	0.929
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Install subroutines into packages easily
+WWW=		https://metacpan.org/release/Sub-Install
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		perl5
 USE_PERL5=	configure
