--- a/devel/p5-Term-Table/Makefile
+++ b/devel/p5-Term-Table/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Term-Table
-PORTVERSION=	0.015
+PORTVERSION=	0.024
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,12 +8,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Format a header and rows into a table
 WWW=		https://metacpan.org/release/Term-Table
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
-
-BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-Importer>=0.024:devel/p5-Importer
 
 USES=		perl5
 USE_PERL5=	configure
