--- a/devel/p5-Test-Dependencies/Makefile
+++ b/devel/p5-Test-Dependencies/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Test-Dependencies
-PORTVERSION=	0.32
+PORTVERSION=	0.34
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Ensure that your Makefile.PL specifies all module dependencies
 WWW=		https://metacpan.org/release/Test-Dependencies
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
