--- a/devel/p5-Test-Inter/Makefile
+++ b/devel/p5-Test-Inter/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Test-Inter
-PORTVERSION=	1.11
+PORTVERSION=	1.12
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Framework for more readable interactive test scripts
 WWW=		https://metacpan.org/release/Test-Inter
 
-LICENSE=	gpl artistic
+LICENSE=	gpl+ artistic
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
