--- a/devel/p5-Test-More-UTF8/Makefile
+++ b/devel/p5-Test-More-UTF8/Makefile
@@ -1,18 +1,19 @@
 PORTNAME=	Test-More-UTF8
-PORTVERSION=	0.04
-PORTREVISION=	1
+PORTVERSION=	0.05
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Enhancing Test::More for UTF-8-based projects
+WWW=		https://metacpan.org/release/Test-More-UTF8
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-Test-Simple>=0:devel/p5-Test-Simple
+RUN_DEPENDS=	p5-Test-Pod>=1.22:devel/p5-Test-Pod \
+		p5-Test-Pod-Coverage>=1.08:devel/p5-Test-Pod-Coverage
 
 USES=		perl5
 USE_PERL5=	configure
