--- a/devel/p5-Test-Refcount/Makefile
+++ b/devel/p5-Test-Refcount/Makefile
@@ -1,21 +1,24 @@
 PORTNAME=	Test-Refcount
-PORTVERSION=	0.08
-PORTREVISION=	1
+PORTVERSION=	0.10
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Assert reference counts on objects
+WWW=		https://metacpan.org/release/Test-Refcount
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	p5-Devel-MAT>=0:devel/p5-Devel-MAT
 TEST_DEPENDS=	p5-Test-Pod>=1:devel/p5-Test-Pod
 
-USE_PERL5=	configure
 USES=		perl5
+USE_PERL5=	modbuild
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
