--- a/devel/p5-Test-Time/Makefile
+++ b/devel/p5-Test-Time/Makefile
@@ -1,19 +1,20 @@
 PORTNAME=	Test-Time
-PORTVERSION=	0.04
-PORTREVISION=	1
+PORTVERSION=	0.092
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl extension to override time()/sleep() core functions for testing
+WWW=		https://metacpan.org/release/Test-Time
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
-
-TEST_DEPENDS=	p5-File-Slurp>=0:devel/p5-File-Slurp
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		perl5
 USE_PERL5=	configure
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
