--- a/devel/p5-Time-Duration-Parse/Makefile
+++ b/devel/p5-Time-Duration-Parse/Makefile
@@ -1,22 +1,22 @@
 PORTNAME=	Time-Duration-Parse
-PORTVERSION=	0.14
+PORTVERSION=	0.16
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Parse string that represents time duration
+WWW=		https://metacpan.org/release/Time-Duration-Parse
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-Exporter-Lite>=0.02:devel/p5-Exporter-Lite
 TEST_DEPENDS=	p5-Time-Duration>=1.0.6:devel/p5-Time-Duration
 
-NO_ARCH=	yes
 USES=		perl5
 USE_PERL5=	configure
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
