--- a/textproc/p5-Text-CSV/Makefile
+++ b/textproc/p5-Text-CSV/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Text-CSV
-PORTVERSION=	2.04
+PORTVERSION=	2.06
 CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Composition and decomposition of comma-separated values
 WWW=		https://metacpan.org/release/Text-CSV
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 #BUILD_DEPENDS=	${RUN_DEPENDS}
