--- a/textproc/p5-Text-Tabs+Wrap/Makefile
+++ b/textproc/p5-Text-Tabs+Wrap/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Text-Tabs+Wrap
-PORTVERSION=	2021.0814
+PORTVERSION=	2024.001
 CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Line wrapping to form simple paragraphs
 WWW=		https://metacpan.org/release/Text-Tabs+Wrap
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
