--- a/devel/p5-parent/Makefile
+++ b/devel/p5-parent/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	parent
-PORTVERSION=	0.241
+PORTVERSION=	0.244
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:CORION
@@ -7,6 +7,7 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Establish an ISA relationship with base classes at compile time
+WWW=		https://metacpan.org/release/parent
 
 LICENSE=	artistic gpl
 LICENSE_COMB=	dual
