--- a/devel/p5-Package-Stash-XS/Makefile
+++ b/devel/p5-Package-Stash-XS/Makefile
@@ -1,28 +1,23 @@
-
-
 PORTNAME=	Package-Stash-XS
-PORTVERSION=	0.28
+PORTVERSION=	0.30
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
-MASTER_SITE_SUBDIR=	CPAN:DOY
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Faster and more correct implementation of the Package::Stash API
+WWW=		https://metacpan.org/release/Package-Stash-XS
 
-LICENSE=	perl
+LICENSE=	artistic gpl+
+LICENSE_COMB=	dual
 
-TEST_DEPENDS=	p5-Test-Fatal>=0:${PORTSDIR}/devel/p5-Test-Fatal \
-	p5-Test-Requires>=0:${PORTSDIR}/devel/p5-Test-Requires
+TEST_DEPENDS=	p5-Test-Fatal>=0:devel/p5-Test-Fatal \
+		p5-Test-Needs>=0:devel/p5-Test-Needs
 
-PERL_CONFIGURE=	yes
 USES=		perl5
 USE_PERL5=	configure
 
-.include <bsd.port.pre.mk>
+post-install:
+	${STRIP_CMD} ${STAGEDIR}${PREFIX}/${SITE_ARCH_REL}/auto/Package/Stash/XS/XS.so
 
-.if ${PERL_LEVEL} < 501001
-TEST_DEPENDS+=	p5-Test-Simple>=0.88:${PORTSDIR}/devel/p5-Test-Simple
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
